--- a/.config/i3/config
+++ b/.config/i3/config
@@ -172,18 +172,18 @@ bindsym $mod+a focus parent
 
 # focus the child container
 #bindcode $mod+d focus child
-
+#
 # switch to workspace
-bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
-bindsym $mod+3 workspace 3
-bindsym $mod+4 workspace 4
-bindsym $mod+5 workspace 5
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9
-bindsym $mod+0 workspace 10
+bindsym $mod+1 exec --no-startup-id "$HOME/.config/i3/switch-workspace.py 1"
+bindsym $mod+2 exec --no-startup-id "$HOME/.config/i3/switch-workspace.py 2"
+bindsym $mod+3 exec --no-startup-id "$HOME/.config/i3/switch-workspace.py 3"
+bindsym $mod+4 exec --no-startup-id "$HOME/.config/i3/switch-workspace.py 4"
+bindsym $mod+5 exec --no-startup-id "$HOME/.config/i3/switch-workspace.py 5"
+bindsym $mod+6 exec --no-startup-id "$HOME/.config/i3/switch-workspace.py 6"
+bindsym $mod+7 exec --no-startup-id "$HOME/.config/i3/switch-workspace.py 7"
+bindsym $mod+8 exec --no-startup-id "$HOME/.config/i3/switch-workspace.py 8"
+bindsym $mod+9 exec --no-startup-id "$HOME/.config/i3/switch-workspace.py 9"
+bindsym $mod+0 exec --no-startup-id "$HOME/.config/i3/switch-workspace.py 10"
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace 1
