--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -10,7 +10,12 @@ shadow-opacity = 0.6;
 shadow-red = 0.0;
 shadow-green = 0.0;
 shadow-blue = 0.0;
-shadow-exclude = [ "name = 'Notification'", "class_g = 'Conky'", "class_g = 'i3-frame'",  "class_g ?= 'Notify-osd'", "class_g = 'Cairo-clock'" ];
+shadow-exclude = [ "name = 'Notification'", 
+		"class_g = 'Conky'", 
+		"class_g = 'i3-frame'",  
+		"class_g ?= 'Notify-osd'", 
+		"class_g = 'Cairo-clock'",
+		"_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"];
 shadow-ignore-shaped = true;
 # shadow-exclude-reg = "x10+0+0"
 
@@ -29,6 +34,9 @@ blur-kern = "3x3box"
 # blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1"
 # blur-background-fixed = true;
 blur-background-exclude = [ "window_type = 'dock'", "window_type = 'desktop'" ];
+opacity-rule = [ 
+  "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
+];
 
 # Fading
 fading = true;
