updated user service file xorg exports enviroment removed hardcoding

--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -58,7 +58,8 @@ vsync = "none";
 dbe = false;
 paint-on-overlay = true;
 # sw-opti = true;
-unredir-if-possible = true;
+# Testing if this fixes electricsheep spiking to 300% cpu usage
+unredir-if-possible = false;
 unredir-if-possible-exclude = [ "class_g = 'Firefox'" ]
 focus-exclude = [ "class_g = 'Cairo-clock'" ];
 detect-transient = true;
