--- a/.config/systemd/user/electricsheep-desktop@.service
+++ b/.config/systemd/user/electricsheep-desktop@.service
@@ -1,9 +1,9 @@
 [Unit]
 Description=Runs Electricsheep as the desktop wallpaper on the given output
 Requires=compton.service
+After=compton.service
 
 [Service]
-Environment="DISPLAY=:0"
 ExecStart=/home/chaos/bin/electricsheep-desktop start %i
 
 [Install]
