--- a/.config/systemd/user/xorg.service
+++ b/.config/systemd/user/xorg.service
@@ -8,7 +8,7 @@ Before=xorg.target
 
 [Service]
 ExecStart=/usr/bin/Xorg $DISPLAY -nolisten tcp -noreset -verbose 1 vt1
-ExecStartPost=systemctl --user set-environment DISPLAY=:0
+ExecStartPost=/usr/bin/systemctl --user set-environment DISPLAY=:0
 SuccessExitStatus=0 1
 
 [Install]
