--- a/.config/systemd/user/xresources.service
+++ b/.config/systemd/user/xresources.service
@@ -2,9 +2,9 @@
 [Unit]
 Description=X resource loader
 Requires=xorg.service
+After=xorg.service
 
 [Service]
-Environment="DISPLAY=:0"
 Type=oneshot
 RemainAfterExit=true
 ExecStart=/usr/bin/xrdb -load .Xresources
