fix shadows cast by electricsheep

--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -11,11 +11,13 @@ shadow-red = 0.0;
 shadow-green = 0.0;
 shadow-blue = 0.0;
 shadow-exclude = [ "name = 'Notification'", 
+		"name = 'Electric Sheep'",
 		"class_g = 'Conky'", 
 		"class_g = 'i3-frame'",  
 		"class_g ?= 'Notify-osd'", 
 		"class_g = 'Cairo-clock'",
-		"_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"];
+		"_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
+		"_NET_WM_STATE@:32a *= '_NET_WM_STATE_FULLSCREEN'"];
 shadow-ignore-shaped = true;
 # shadow-exclude-reg = "x10+0+0"
 
