--- a/.config/i3/config
+++ b/.config/i3/config
@@ -86,7 +86,7 @@ set_from_resource $i3barbtx i3bar.bindingMode.text 	 #888888
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
-font "xft:Terminus 9"
+font "xft:xos4 Terminus 10"
 #font pango:DejaVu Sans Mono 0
 # The font above is very space-efficient, that is, it looks good, sharp and
 # clear in small sizes. However, if you need a lot of unicode glyphs or
