--- a/.config/i3/config
+++ b/.config/i3/config
@@ -231,33 +231,7 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-bar {
-	i3bar_command i3bar -t
-	mode dock # dock | hide
-	modifier $mod
-	position top # top | bottom
-        status_command i3status
-	tray_output none
-	status_command i3blocks
-#	workspace_buttons no
-	colors {
-		background $i3barbg
-		statusline $i3barst
-		separator  $i3barse
-		focused_background $i3barfbg
-		focused_statusline $i3barfst
-		focused_separator  $i3barfse
 
-		focused_workspace	$i3barwfbo $i3barwfbg $i3barwftx
-		active_workspace	$i3barwabo $i3barwabg $i3barwatx
-		inactive_workspace	$i3barwibo $i3barwibg $i3barwitx
-		urgent_workspace	$i3barwubo $i3barwubg $i3barwutx
-		
-		binding_mode		$i3barbbo $i3barbbg $i3barbtx
-	}
-}
 
 # Border sizes
 new_window none # normal x | 1pixel | none | pixel x
@@ -287,3 +261,4 @@ for_window [class="streaming_client"] fullscreen
 for_window [class="pinentry-gtk-2"] floating enable
 exec "xset s off"
 exec "xset -dpms"
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
