--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -43,8 +43,8 @@ module-margin-left = 1
 module-margin-right = 2
 
 font-0 = fixed:pixelsize=10;1
-font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
-font-2 = siji:pixelsize=10;1
+font-1 = "GNU Unifont:fontformat=truetype:size=8:antialias=false;0"
+font-2 = "Wucon Siji:pixelsize=10;1"
 
 modules-left = bspwm i3
 modules-center = 
