--- a/.config/rofi/config
+++ b/.config/rofi/config
@@ -2,12 +2,12 @@
 rofi.theme: gray
 
 ! positioning seems broken in themes, set it here
-rofi.location: 1
-rofi.xoffset: 14
-rofi.yoffset: 14
+!rofi.location: 1
+!rofi.xoffset: 14
+!rofi.yoffset: 14
 
 ! lines set in theme can't be overwritten
-rofi.lines: 20
+!rofi.lines: 20
 
 ! width set in theme can't be overwritten
-rofi.width: 30
+!rofi.width: 30
