--- a/.config/i3/config
+++ b/.config/i3/config
@@ -229,6 +229,9 @@ mode "resize" {
         bindsym Escape mode "default"
 }
 
+bar {
+  status_command i3status
+}
 bindsym $mod+r mode "resize"
 
 # Border sizes
@@ -260,5 +263,6 @@ for_window [class="Awesomenauts.bin.x86"] fullscreen
 for_window [class="Diablo III.exe"] fullscreen
 for_window [class="streaming_client"] fullscreen
 for_window [class="pinentry-gtk-2"] floating enable
+for_window [class="t-engine64"] fullscreen
 exec "xset s off"
 exec "xset -dpms"
