--- a/.config/sway/style.conf
+++ b/.config/sway/style.conf
@@ -10,7 +10,19 @@ client.focused_inactive      #282c34b2   #282c34b2     #c678ddFF   #808080b2    
 client.urgent                #e06c75b2   #282c34b2     #e06c75ff   #808080b2    #c678ddb2
 
 bar {
-  status_command i3status
+  colors {
+    background #282c34b2
+    focused_background #282c34b2
+    statusline #abb2bfff
+    focused_statusline #abb2bfff
+    separator #abb2bfff
+    focused_separator #abb2bfff
+    focused_workspace #c678ddFF #282c34b2 #c678ddFF
+    active_workspace #abb2bfff #282c34b2 #abb2bfff
+    inactive_workspace #282c34b2 #282c34b2 #abb2bfff
+    urgent_workspace #282c34b2 #282c34b2 #e06c75ff
+    binding_mode #282c34b2 #282c34b2 #e06c75ff
+  }
 }
 
 # Border sizes
