--- a/.config/sway/style.conf
+++ b/.config/sway/style.conf
@@ -4,33 +4,23 @@
 font "xft:xos4 Terminus 10"
 
 #                             <border>  <background>     <text>   <indicator> <child_border>
-client.focused               #c678ddb2   #282c34b2     #c678ddFF   #808080b2    #c678ddb2
-client.unfocused             #282c34b2   #282c34b2     #abb2bfFF   #808080b2    #808080b2
-client.focused_inactive      #282c34b2   #282c34b2     #c678ddFF   #808080b2    #808080b2
-client.urgent                #e06c75b2   #282c34b2     #e06c75ff   #808080b2    #c678ddb2
+client.focused               #c678dd   #282c34     #c678dd   #808080    #c678dd
+client.unfocused             #282c34   #282c34     #abb2bf   #808080    #808080
+client.focused_inactive      #282c34   #282c34     #c678dd   #808080    #808080
+client.urgent                #e06c75   #282c34     #e06c75   #808080    #c678dd
 
 bar {
-  colors {
-    background #282c34b2
-    focused_background #282c34b2
-    statusline #abb2bfff
-    focused_statusline #abb2bfff
-    separator #abb2bfff
-    focused_separator #abb2bfff
-    focused_workspace #c678ddFF #282c34b2 #c678ddFF
-    active_workspace #abb2bfff #282c34b2 #abb2bfff
-    inactive_workspace #282c34b2 #282c34b2 #abb2bfff
-    urgent_workspace #282c34b2 #282c34b2 #e06c75ff
-    binding_mode #282c34b2 #282c34b2 #e06c75ff
-  }
+  swaybar_command waybar
 }
 
 # Border sizes
 default_border none # normal x | 1pixel | none | pixel x
+smart_borders no_gaps
 default_floating_border normal 1 
 # normal x | 1pixel | none | pixel x
 
-hide_edge_borders both
+#hide_edge_borders both
 
 gaps inner 10
 
+output "*" bg #1b1921 solid_color
